# OL-1

./: .stylish-haskell.yaml  .travis.yml  Makefile  OL-I.cabal  bound-extras  cabal.project
OL-I/: OL-I.cabal
OL-I-syntax/: OL-I-syntax.cabal
OL-I-syntax/src/OL1/: Pretty.hs  Syntax.hs
OL-I-syntax/src/OL1/Syntax/: FromSyntax.hs  Internal.hs  Parser.hs  Pretty.hs  Reserved.hs  Sugar.hs  Sym.hs  ToSyntax.hs  Type.hs
OL-I-syntax/test/: UnitTests.hs
OL-I/fixtures/: a0.ol1  a0.out  ex-application.ol1  ex-application.out  ex-const-a.ol1  ex-const-a.out  ex-const-b.ol1  ex-const-b.out  ex-error-a.ol1  ex-error-a.out  ex-id-id.ol1  ex-id-id.out  ex-id-infer.ol1  ex-id-infer.out  ex-id.ol1  ex-id.out  ex-keyword.ol1  ex-keyword.out  ex-occurs.ol1  ex-occurs.out  ex-rigid-b.ol1  ex-rigid-b.out  ex-rigid.ol1  ex-rigid.out  ex-warnings.ol1  ex-warnings.out  search.ol1  search.out  syntax-error.ol1  syntax-error.out  tuples-error-1.ol1  tuples-error-1.out  tuples-poly.ol1  tuples-poly.out  tuples.ol1  tuples.out
OL-I/golden/: f-x-y.txt  id-id.txt  id-poly-infer.txt  id.txt  type-error.txt
OL-I/src/: OL1.hs
OL-I/src/OL1/: Check.hs  Error.hs  Eval.hs  Expr.hs  Internal.hs  Name.hs  Search.hs  Smart.hs  Synth.hs  Type.hs  Value.hs
OL-I/test/: Fixtures.hs  Golden.hs
golden/: id-id-2.txt  id-id.txt  id.txt  occurs.txt  rigid.txt  rigid2.txt
ol1/: OL-I.cabal
ol1-pretty/: OL-I-pretty.cabal
ol1-pretty/src/OL1/: Pretty.hs
ol1/golden/: f-x-y.txt  id-id-2.txt  id-poly-infer.txt  id-poly.txt  rigid.txt  rigid2.txt  type-error.txt
ol1/src/OL1/: Check.hs  Error.hs  Expr.hs  Pretty.hs  Smart.hs  Synth.hs  Type.hs  Value.hs
src/OL1/: Error.hs  Eval.hs  Expr.hs  Name.hs  Pretty.hs  Synth.hs  Type.hs  Unify.hs  Value.hs
test/: Golden.hs
unification-rigid/: unification-rigid.cabal
unification-rigid/src/Control/Unification/: Rigid.hs
