cabal-version:      2.2
name:               OL-I-syntax
version:            1
synopsis:           Oleg's Language I: Pretty class
category:           Language
description:
  Predicative System-F based language.
  Uses LISP-y syntax.

author:             Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:         Oleg Grenrus <oleg.grenrus@iki.fi>
license:            (GPL-2.0-only OR GPL-3.0-only)
extra-source-files: golden/*.txt
tested-with:        ghc ==8.2.2 || ==8.4.4

source-repository head
  type:     git
  location: https://github.com/phadej/OL-1.git

library
  default-language:   Haskell2010
  ghc-options:        -Wall
  hs-source-dirs:     src
  default-extensions:
    DerivingStrategies
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving

  build-depends:
    , base                ^>=4.10.1.0 || ^>=4.11.1.0
    , bound
    , bound-extras
    , bytestring
    , containers
    , integer-logarithms
    , mtl
    , parsers
    , pretty-compact
    , QuickCheck
    , text
    , text-short
    , trifecta
    , unification-rigid
    , utf8-string

  exposed-modules:
    OL1.Pretty
    OL1.Syntax
    OL1.Syntax.Parser
    OL1.Syntax.Pretty
    OL1.Syntax.Sym
    OL1.Syntax.Reserved
    OL1.Syntax.ToSyntax
    OL1.Syntax.Type

test-suite syntax-unittests
  type:               exitcode-stdio-1.0
  default-language:   Haskell2010
  ghc-options:        -Wall
  hs-source-dirs:     test
  main-is:            UnitTests.hs
  default-extensions: OverloadedStrings
  build-depends:
    , base
    , OL-I-syntax
    , QuickCheck
    , tasty
    , tasty-quickcheck
