cabal-version:      2.2
name:               OL-I-syntax
version:            1
synopsis:           Oleg's Language I: Pretty class
category:           Language
description:
  Predicative System-F based language.
  Uses LISP-y syntax.

author:             Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:         Oleg Grenrus <oleg.grenrus@iki.fi>
license:            GPL-2.0-or-later
extra-source-files: golden/*.txt
tested-with:        ghc ==8.2.2 || ==8.4.4 || ==8.6.3

source-repository head
  type:     git
  location: https://github.com/phadej/OL-1.git

library
  default-language:   Haskell2010
  hs-source-dirs:     src
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveTraversable
    DerivingStrategies
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    RankNTypes
    StandaloneDeriving

  -- GHC boot libraries
  build-depends:
    , base        ^>=4.10.1.0 || ^>=4.11.1.0 || ^>=4.12.0.0
    , bytestring  ^>=0.10.8.2
    , containers  ^>=0.5.10.2 || ^>=0.6.0.1
    , mtl         ^>=2.2.2
    , text        ^>=1.2.3.0

  -- other dependencies
  build-depends:
    , ansi-wl-pprint      ^>=0.6.8.2
    , base-compat         ^>=0.10.5
    , bound               ^>=2.0.1
    , bound-extras        ^>=0
    , fin                 ^>=0.0.1
    , integer-logarithms  ^>=1.0.2.2
    , lens                ^>=4.17
    , parsers             ^>=0.12.9
    , pretty-compact      ^>=3.0
    , QuickCheck          ^>=2.12.6.1
    , sop-core            ^>=0.4.0.0
    , text-short          ^>=0.1.2
    , trifecta            ^>=2
    , utf8-string         ^>=1.0.1.1

  -- do we need?
  build-depends:      unification-rigid ^>=0
  exposed-modules:
    OL1.Syntax
    OL1.Syntax.FromSyntax
    OL1.Syntax.Internal
    OL1.Syntax.Parser
    OL1.Syntax.Pretty
    OL1.Syntax.Reserved
    OL1.Syntax.Sym
    OL1.Syntax.ToSyntax
    OL1.Syntax.Type

test-suite syntax-unittests
  type:               exitcode-stdio-1.0
  default-language:   Haskell2010
  hs-source-dirs:     test
  main-is:            UnitTests.hs
  default-extensions: OverloadedStrings

  -- dependencies constrained by the library
  build-depends:
    , base
    , OL-I-syntax
    , QuickCheck

  -- test only dependencies
  build-depends:
    , tasty             ^>=1.2
    , tasty-quickcheck  ^>=0.10
