cabal-version:      2.2
name:               OL-I
version:            1
synopsis:           Oleg's Language I
category:           Language
description:
  Predicative System-F based language.
  Uses LISP-y syntax.

author:             Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:         Oleg Grenrus <oleg.grenrus@iki.fi>
license:            GPL-2.0-or-later
extra-source-files: golden/*.txt
tested-with:        ghc ==8.2.2 || ==8.4.4

source-repository head
  type:     git
  location: https://github.com/phadej/OL-1.git

library
  default-language:   Haskell2010
  hs-source-dirs:     src
  default-extensions:
    DataKinds
    DefaultSignatures
    DeriveFoldable
    DeriveFunctor
    DeriveTraversable
    DerivingStrategies
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    RankNTypes
    ScopedTypeVariables
    TypeFamilies
    TypeOperators

  -- GHC boot libraries
  build-depends:
    , base          ^>=4.10.1.0 || ^>=4.11.1.0 || ^>=4.12.0.0
    , containers    ^>=0.5.7.1 || ^>=0.6.0.1
    , mtl           ^>=2.2.2
    , text          ^>=1.2.3.0
    , transformers  ^>=0.5.2.0

  -- other dependencies
  build-depends:
    , base-compat        ^>=0.10.5
    , bound              ^>=2.0.1
    , bound-extras       ^>=0
    , lens               ^>=4.17
    , OL-I-syntax        ^>=1
    , pretty-compact     ^>=3.0
    , recursion-schemes  ^>=5.1
    , unification-rigid  ^>=0

  -- tmp
  build-depends: text-short

  exposed-modules:
    OL1
    OL1.Check
    OL1.Error
    OL1.Expr
    OL1.Synth
    OL1.Type
    OL1.Value

test-suite golden
  default-language:   Haskell2010
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Golden.hs
  default-extensions: OverloadedStrings
  build-depends:
    , base
    , containers
    , filepath
    , OL-I
    , pretty-compact
    , text
    , tasty
    , tasty-golden
    , utf8-string

test-suite fixtures
  type:               exitcode-stdio-1.0
  default-language:   Haskell2010
  hs-source-dirs:     test
  main-is:            Fixtures.hs
  default-extensions: OverloadedStrings
  build-depends:
    , base
    , containers
    , mtl
    , OL-I
    , OL-I-syntax
    , pretty-compact

  -- test only GHC boot libs
  build-depends:
    , bytestring  ^>=0.10.8.2
    , directory   ^>=1.3.0.2
    , filepath    ^>=1.4.1.2

  -- test only dependencies
  build-depends:
    , tasty         ^>=1.2
    , tasty-golden  ^>=2.3.2
    , utf8-string   ^>=1.0.1.1
